@@ -33,3 +33,7 @@ Fixed issue with grade instance fetching
 Added core grid and list view functionality
 
 Added settings for max courses in row of grid format and fixed JS issue
+
+15/2/17
+
+Removed max grid row limit as conflicts with other calculations
